--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,12 @@
 /* Общие */
 @font-face{
 	src: url('../fonts/PTSansNarrowBold.ttf');
-	font-family: 'SansBold';
+	font-family: 'NarrowSansBold';
 }
 
 @font-face{
 	src: url('../fonts/PTSansNarrowRegular.ttf');
-	font-family: 'SansRegular';
+	font-family: 'NarrowSansRegular';
 }
 
 body{
@@ -15,11 +15,12 @@ body{
 
 
 #main-wrap{
-	font-family: SansRegular;
+	font-family: NarrowSansRegular;
 	width: 100%;
 }
 
 .container{
+	display: block;
 	width: 1170px;
 	margin: 0 auto;
 }
@@ -32,8 +33,8 @@ body{
 
 /* HEADER */
 #main-header{
-	margin: 10px auto;
-	margin-top: 50px;
+	margin: 5px auto;
+	margin-top: 10px;
 	height: 300px;
 }
 
@@ -59,6 +60,8 @@ body{
 	}
 	.main-header-phone-text{
 		display: block;
+		text-decoration: none;
+		outline: none;
 		color: #425972;
 		font-size: 32px;
 	}
@@ -81,12 +84,13 @@ body{
 	.main-header-address i{
 		display: inline-block;
 		color: #C0C0C0;
-		font-size: 32px;
+		font-size: 50px;
 		margin-right: 10px;
 		margin-bottom: 5px;
 	}
 	.main-header-address-text{
 		display: inline-block;
+		margin-left: 5px;
 		color: #425972;
 		font-size: 26px;
 	}
@@ -123,3 +127,37 @@ body{
 	.main-header-cart-inyourcart-itemsNum{
 		color: #65A4C4;
 	}
+
+	/* TOP-NAV */
+#top-nav{
+	display: block;
+	width: 1170px;
+	margin: 0 auto;
+	padding-top: 20px;
+}
+
+#top-nav-list{
+	list-style-type: none;
+}
+
+#top-nav-list li{
+	display: inline-block;
+}
+
+#top-nav-list li a{
+	text-decoration: none;
+	padding: 10px 30px;
+	color: #fff;
+	font-size: 22px;
+	border: 1px solid #686868;
+	background-color: #686868;
+	border-radius: 5px;
+	margin: 0 3px;
+	transition: background-color .3s ease-in,
+							border-color .3s ease-in;
+}
+
+#top-nav-list li a:hover{
+	background-color: #F41C1C;
+	border: 1px solid #F41C1C;
+}
