--- a/ftp/css/style.css
+++ b/ftp/css/style.css
@@ -19,11 +19,6 @@ body{
 	width: 100%;
 }
 
-main {
-	width: 1170px;
-	margin: 0 auto;
-}
-
 .container{
 	display: block;
 	width: 1170px;
@@ -36,10 +31,25 @@ main {
 	clear: both;
 }
 
+main{
+	width: 1170px;
+	margin: 0 auto;
+}
+
+main .container{
+	margin-top: 50px;
+}
+
 /* HEADER */
 #main-header{
+	width: 100%;
 	margin: 5px auto;
 	margin-top: 10px;
+}
+
+.header_container{
+	width: 1170px;
+	margin: 0 auto;
 }
 
 .main-header-logo{
@@ -155,6 +165,11 @@ main {
 	display: inline-block;
 }
 
+#top-nav-list li a:hover{
+	background-color: #F41C1C;
+	border: 1px solid #F41C1C;
+}
+
 #top-nav-list li a{
 	text-decoration: none;
 	padding: 10px 30px;
@@ -168,32 +183,67 @@ main {
 							border-color .3s ease-in;
 }
 
-#top-nav-list li a:hover{
-	background-color: #F41C1C;
-	border: 1px solid #F41C1C;
+/* LEFT-NAV */
+#left-sideb{
+	display: block;
+	float: left;
+	width: 260px;
 }
 
-/* LEFT-NAV */
 .left-nav{
 	display: block;
 	float: left;
-	width: 300px;
+	width: 260px;
 }
 
-#left-nav-list{
+.menu-menu-in-left-sidebar-container
+{
+}
+
+#menu-menu-in-left-sidebar{
 	list-style-type: none;
 	margin: 0;
 	padding: 0;
 }
 
-#left-nav-list li{
+#menu-menu-in-left-sidebar li:hover{
+	background-color: #E6E6E6;
+}
+
+#menu-menu-in-left-sidebar>li:nth-child(1):after,
+#menu-menu-in-left-sidebar>li:nth-child(7):after,
+#menu-menu-in-left-sidebar>li:nth-child(9):after,
+#menu-menu-in-left-sidebar>li:nth-child(10):after,
+#menu-menu-in-left-sidebar>li:nth-child(11):after,
+#menu-menu-in-left-sidebar>li:nth-child(13):after,
+#menu-menu-in-left-sidebar>li:nth-child(14):after{
+	content: '>';
+	color: #fff;
+	float: right;
+	margin-right: 10px;
+	margin-top: -10px;
+	font-size: 40px;
+	font-family: NarrowSansBold;
+} 
+
+#menu-menu-in-left-sidebar>li:nth-child(12):after{
+	content: '>';
+	color: #fff;
+	float: right;
+	margin-right: 10px;
+	margin-top: -40px;
+	font-size: 40px;
+	font-family: NarrowSansBold;
+} 
+
+#menu-menu-in-left-sidebar li{
 	padding: 15px 0;
 	margin: 0;
 	margin-bottom: 1px;
 	background-color: #D7D7D7;
 	border-bottom: 1px solid #919191;
 	border-radius: 5px;
-	width: 300px;
+	width: 260px;
 	cursor: pointer;
 	background-image: url("../img/menu_1.png");
 	background-repeat: no-repeat;
@@ -201,18 +251,7 @@ main {
 	transition: background-color .3s ease-in;
 }
 
-#left-nav-list li:hover{
-	background-color: #E6E6E6;
-}
-
-#left-nav-list li a{
-	padding-left: 68px;
-	text-decoration: none;
-	font-size: 22px;
-	color: #000;
-}
-
-#left-nav-list li a .whiteArrow{
+#menu-menu-in-left-sidebar li a .whiteArrow{
 	color: #fff;
 	float: right;
 	margin-right: 10px;
@@ -221,14 +260,21 @@ main {
 	font-family: NarrowSansBold;
 }
 
-#left-nav-list li ul{
+#menu-menu-in-left-sidebar li a{
+	padding-left: 68px;
+	text-decoration: none;
+	font-size: 18px;
+	color: #000;
+}
+
+#menu-menu-in-left-sidebar li ul{
 	position: absolute;
-	margin: -42px 0 0 265px;
+	margin: -35px 0 0 225px;
 	display: none;
 	list-style-type: none;
 }
 
-#left-nav-list li:hover ul {display: block;}
+#menu-menu-in-left-sidebar li:hover ul {display: block;}
 
 /* NEWSBAR */
 .newsbar{
@@ -255,7 +301,7 @@ main {
 
 .newsbar-article-pic{
 	display: inline-block;
-	width: 300px;
+	width: 260px;
 }
 
 .newsbar-article-text{
@@ -329,6 +375,12 @@ main {
 	width: 700px;
 }
 
+.slider-pic:hover{
+	/*grayscale for background image*/
+  background-color: #AAA;
+  background-blend-mode: darken;
+}
+
 .slider-pic{
 	display: block;
 	width: 720px;
@@ -336,13 +388,8 @@ main {
 	background: url("../img/slider0.jpg") no-repeat;
 	background-size: cover;
 	border-radius: 10px;
-	transition: background-color .4s ease-in;
-}
-
-.slider-pic:hover{
-	/*grayscale for background image*/
-  background-color: #AAA;
-  background-blend-mode: darken;
+	transition: background-color .4s ease-in,
+				background-image 1s ease-out;
 }
 
 .slider-pic-text{
@@ -372,9 +419,14 @@ main {
 /* NEWS */
 .news{
 	display: block;
-	float: left;
 	padding: 20px 0 0 50px;
-	width: 750px;
+	width: 700px;
+	overflow: hidden;
+}
+
+.article:hover{
+	background-color: #E6EAF5;
+	border: 1px solid #E6EAF5;
 }
 
 .article{
@@ -389,16 +441,11 @@ main {
 	border: 1px solid #D8DCE6;
 	border-radius: 10px;
 	outline: none;
-	width: 230px;
+	width: 215px;
 	height: 170px;
 	margin: 10px 10px 0 0;
 	text-decoration: none;
 	transition: background-color .3s ease-in;
-}
-
-.article:hover{
-	background-color: #E6EAF5;
-	border: 1px solid #E6EAF5;
 }
 
 .article-title{
