added footer and dynamic categories

--- a/ftp/css/categories.css
+++ b/ftp/css/categories.css
@@ -9,14 +9,15 @@ main.categories_container{
 	overflow: hidden;
 	width: 1170px;
 	margin: 0 auto;
-	margin-top: 50px;
+	margin-top: 15px;
 }
 
 .categories-title{
 	display: inline-block;
 	width: 550px;
 	margin-left: 300px;
-	font-size: 34px;
+	font-size: 30px;
+	text-align: center;
 	font-family: NarrowSansBold;
 	color: #2C343F;
 }
@@ -25,63 +26,37 @@ main.categories_container{
 	display: block;
 	width: 1170px;
 	margin: 0 auto;
-	margin-top: 50px;
+	margin-top: 15px;
 }
 
 .categories-items-element:hover{
 	background-image: url("../img/categoryRawBackgroundHover.jpg");
+	filter: grayscale(0);
+}
+
+.categories-items-element:first-child{
+	margin-left: 0px;
+}
+
+.categories-items-element:nth-child(6n){
+	margin-left: 0px;
 }
 
 .categories-items-element{
 	display: block;
 	float: left;
+	filter: grayscale(1);
 	margin-top: 10px;
 	margin-left: 10px;
-	width: 200px;
+	width: 226px;
 	height: 230px;
 	background: url("../img/categoryRawBackground.JPG") no-repeat;
 	background-size: cover;
 	border-radius: 10px;
 	text-align: center;
-	transition: background-image .3s ease-in;
-	-moz-transition: background-image .3s ease-in;
 	text-decoration: none;
-}
-
-.categories-items-element:nth-child(2) span.categories-items-element-pic{
-	background-image: url("../img/cat2.png");
-}
-
-.categories-items-element:nth-child(3) span.categories-items-element-pic{
-	background-image: url("../img/cat3.png");
-}
-
-.categories-items-element:nth-child(4) span.categories-items-element-pic{
-	background-image: url("../img/cat4.png");
-}
-
-.categories-items-element:nth-child(5) span.categories-items-element-pic{
-	background-image: url("../img/cat5.png");
-}
-
-.categories-items-element:nth-child(6) span.categories-items-element-pic{
-	background-image: url("../img/cat6.png");
-}
-
-.categories-items-element:nth-child(7) span.categories-items-element-pic{
-	background-image: url("../img/cat7.png");
-}
-
-.categories-items-element:nth-child(8) span.categories-items-element-pic{
-	background-image: url("../img/cat8.png");
-}
-
-.categories-items-element:nth-child(9) span.categories-items-element-pic{
-	background-image: url("../img/cat9.png");
-}
-
-.categories-items-element:nth-child(10) span.categories-items-element-pic{
-	background-image: url("../img/cat10.png");
+	transition: background-image .3s ease-in,
+				filter .3s ease-in;
 }
 
 .categories-items-element-pic{
