--- a/ftp/css/footer.css
+++ b/ftp/css/footer.css
@@ -3,15 +3,16 @@ footer{
 	display: block;
 	margin: 0 auto;
 	margin-top: 50px;
-	width: 100%;
-	height: 300px;
+	padding-top: 10px;
+	padding-bottom: 50px;
 	background-color: #484C58;
 	color: #fff;
 	font-size: 16px;
 }
 
 footer .container{
-	padding-top: 50px;
+	display: block;
+	margin-top: 50px;
 }
 
 footer a{
