--- a/css/cart.css
+++ b/css/cart.css
@@ -7,3 +7,109 @@
 	display: block;
 	border-collapse: collapse;
 }
+
+#cart-items-table th{
+	font-size: 18px;
+	color: ;
+}
+
+#cart-items-table th{
+	padding-right: 30px;
+	border-bottom: 2px solid #686868;
+}
+
+#cart-items-table td:nth-child(2) {
+	padding-right: 70px;
+	font-style: NarrowRegularBold;
+}
+
+.cart-items-table-num{
+	width: 30px;
+}
+
+.cart-items-table-pic{
+	display: block;
+	background: url("http://megapolis-mck.ru/wp-content/themes/megapolis/img/menu_1.png	") no-repeat;
+	height: 32px;
+	width: 32px;
+	background-size: cover;
+}
+
+
+.cart-items-table-delete{
+	text-decoration: none;
+	color: darkred;
+}
+
+.cart-orderinfo{
+	display: block;
+	margin-left: 330px;
+	margin-top: 20px;
+	font-size: 20px;
+	font-style: NarrowRegularBold;
+}
+
+.contactForm{
+	display: block;
+	margin-top: 50px;
+}
+
+.contactForm-title{
+	display: block;
+	font-size: 24px;
+	color: #686868;
+	font-style: NarrowRegularBold;
+}
+
+.contactForm-info{
+	display: block;
+	margin-top: 30px;
+}
+
+.contactForm-info-line{
+	display: block;
+	margin-top: 15px;
+}
+
+.contactForm-info-lab{
+	display: block;
+	float: left;
+	font-size: 18px;
+	width: 200px;
+}
+
+.contactForm-info-star{
+	color: red;
+	font-size: 22px;
+}
+
+.contactForm-info-field{
+	display: block;
+	float: left;
+	font-size: 18px;
+	width: 400px;
+}
+
+.contactForm-info-makeorder{
+	display: block;
+	margin-top: 30px;
+}
+
+.contactForm-info-makeorder:hover{
+	background-color: #0274BB;
+}
+
+.contactForm-info-makeorder{
+	display: block;
+	margin-top: 50px;
+	margin-left: 460px;
+	width: 150px;
+	height: 50px;
+	background-color: #068CDE;
+	border-radius: 5px;
+	font-size: 18px;
+	font-family: NarrowRegularBold;
+	outline: none;
+	color: #fff;
+	transition: background-color .3s ease-in;
+}
