--- a/ftp/css/category.css
+++ b/ftp/css/category.css
@@ -1,8 +1,8 @@
 .category-container{
 	display: block;
 	float: left;
-	width: 860px;
-	padding-left: 50px;
+	width: 880px;
+	padding-left: 30px;
 }	
 
 .category-title{
@@ -23,14 +23,18 @@
 	background-blend-mode: darken;
 }
 
+.categor-elements-item:first-element{
+	margin-left: 0;
+}
+
 .category-elements-item{
 	display: block;
 	float: left;
 	outline: none;
 	text-decoration: none;
-	width: 250px;
-	height: 250px;
-	margin-left: 30px;
+	width: 266px;
+	height: 266px;
+	margin-left: 20px;
 	transition: background-color .3s ease-in;
 } 
 
@@ -40,7 +44,7 @@
 	width: 100%;
 	background: url("../img/category/armatura.png")
 				no-repeat;
-	background-size: cover;
+	background-size: contain;
 }
 
 .category-elements-item-text{
